# StratifiedSampling

./: CMakeLists.txt  ICP.cc  README.md  Test.cxx  TriMesh.cc  TriMesh_algo.h  TriMesh_connectivity.cc  TriMesh_normals.cc  TriMesh_pointareas.cc  arcball.h  array.h  bbox.h  boxbox.h  buffer.h  cloud.h  diffuse.cc  heap.h  image.h  integrate.h  main.cpp  modelwindow.h  remove.cc  scalar.h  subdiv.cc  trans.h  trimeshutil.h  vtkStratifiedSampling.cxx  vtkStratifiedSampling.h  vtkStratifiedSampling.xml
TestingData/: sampled.vtp
implementation/: Color.h  ICP.cc  TriMesh.h  TriMesh_bounding.cc  TriMesh_curvature.cc  TriMesh_grid.cc  TriMesh_stats.cc  TriMesh_tstrips.cc  boxbox.cpp  bufferops.h  edgeflip.cc  faceflip.cc  filter.cc  lmsmooth.cc  matrix.h  modelwindow.cpp  octree.h  pointsample.cpp  pointsample.h  quaternion.h  reorder_verts.cc  sample.cpp  sample.h  stratify.cpp  stratify.h  tribox.cpp  tribox.h  vector.h
